SyntacticAnalyzer/tests/fail/sentenciasimple-expresion04.java
class foo {
	ctor (int n1)
	var int n2;
	{	
		// llamada al final de la sentencia
		(new prueba ('a', "cadena", 2, true, null, n1 + 8 / 2 % 2 * 8).);
	}
}
